initial import of node part

--- a/linux/modbus/Makefile
+++ b/linux/modbus/Makefile
@@ -1,7 +1,7 @@
 all: read
 
 read:   read.c
-	gcc -Wall `pkg-config --cflags --libs libmodbus` -o read read.c
+	gcc -Wall `pkg-config --cflags --libs libmodbus hiredis` -o read read.c
 
 clean:
 	rm -rf *.o read
